--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
+    "formidable": "^3.5.4",
     "mysql2": "^3.15.3",
     "next": "16.0.3",
     "react": "19.2.0",
